GearsetPOC/force-app/main/default/objects/FPU_PaxTypeDemography__c/FPU_PaxTypeDemography__c.object-meta.xml
<CustomObject>
    <description>Keeps the mapping of Passenger type and demographics</description>
    <label>FPU_PaxTypeDemography</label>
    <nameField>
        <label>PaxTypeDemography Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FPU_PaxTypesDemography</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>