GearsetPOC/force-app/main/default/objects/FPU_PaxTypeDemography__c/fields/Demography__c.field-meta.xml
<CustomField>
    <fullName>Demography__c</fullName>
    <label>Demography</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>