GearsetPOC/force-app/main/default/objects/FPU_PaxTypeDemography__c/fields/PaxType__c.field-meta.xml
<CustomField>
    <fullName>PaxType__c</fullName>
    <description>Passenger type code</description>
    <label>PaxType</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>