GearsetPOC/force-app/main/default/objects/FPU_PaxTypeDemography__c/fields/ShortPaxType__c.field-meta.xml
<CustomField>
    <fullName>ShortPaxType__c</fullName>
    <description>Shortened Passenger Type</description>
    <label>ShortPaxType</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>