GearsetPOC/force-app/main/default/objects/FPU_PaxTypeDemography__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PaxType__c</columns>
    <columns>ShortPaxType__c</columns>
    <columns>Demography__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>